@startuml
!pragma layout smetana
' Define interface and classes

class House {
  + Address: String
  + ZIPCode: String
  + GPSLocation: String
}

class Room {
  + Name: String
  + Floor: Integer
  + Dimensions: String
}

class PowerGenerator {
  + Type: String
  + Capacity: Double
}

class EnergyStorage {
  + Type: String
  + Capacity: Double
}

class User {
  + Username: String
  + Role: Role
}
interface Device {
  + Name: String
  + Type: String
  + Location: Room
}

class Sensor implements Device {
  + MeasurementType: String
}

class Actuator implements Device {
  + State: String
  + OutputValue: String
}

enum Role {
  Administrator
  RegularUser
  PowerUser
  RoomOwner
}

' Define relationships
House "1" -- "1..*" Room
Room "1" -- "0..*" Device
User "0..*" -- "1..*" House : has access to >
House "1" -- "0..*" PowerGenerator
House "1" -- "0..*" EnergyStorage
Room "0..*" -- "0..*" User : has owners >

' Define inheritance
Device <|-- Sensor
Device <|-- Actuator

@enduml